--- a/roles/kubernetes/tasks/rbac.yml
+++ b/roles/kubernetes/tasks/rbac.yml
@@ -1,21 +1,14 @@
 # rbac bootstrap
 - name: copy rbac bootstrap config
   template:
-    src: rbac/bootstrap.yml.j2
+    src: bootstrap/rbac.yml.j2
     dest: "/home/{{ansible_env.SUDO_USER}}/rbac-bootstrap.yml"
     owner: "{{ansible_env.SUDO_USER}}"
   register: rbac_bootstrap_config
 
-- name: bootstrap rbac
+- name: apply rbac bootstrap config
   shell: kubectl apply -f rbac-bootstrap.yml
   become: false
-  when: rbac_bootstrap_config.changed
-  ignore_errors: true
   register: rbac_bootstrap
-
-- name: reset rbac bootstrap
-  file:
-    path: "/home/{{ansible_env.SUDO_USER}}/rbac-bootstrap.yml"
-    state: absent
-  failed_when: true
-  when: rbac_bootstrap is failed
+  changed_when: "'created' in rbac_bootstrap.stdout 
+                or ' changed' in rbac_bootstrap.stdout"
