--- a/roles/flanneld/tasks/install_debian.yml
+++ b/roles/flanneld/tasks/install_debian.yml
@@ -5,16 +5,21 @@
   check_mode: false
   changed_when: flanneld_version not in flanneld_current_version.stderr
 
+- name: uninstall
+  file:
+    path: /usr/local/bin/flanneld
+    state: absent
+  when: flanneld_current_version.changed
+
 - name: "install ({{flanneld_arch | default(ansible_architecture)}})"
   get_url:
     url: "https://github.com/coreos/flannel/releases/download/v{{flanneld_version}}/flanneld-{{flanneld_arch}}"
-    dest: "/usr/local/bin/flanneld"
+    dest: /usr/local/bin/flanneld
     remote_src: true
     mode: +x
   notify: 
     - restart flanneld on masters
     - restart flanneld and docker on minions
-  when: flanneld_current_version.changed
 
 - block:
   - name: create required directories
