--- a/roles/docker/tasks/atomic-29-fix.yml
+++ b/roles/docker/tasks/atomic-29-fix.yml
@@ -18,7 +18,7 @@
   replace:
     path:  /etc/systemd/system/docker.service
     regexp: 'native.cgroupdriver=\w+'
-    replace: "native.cgroupdriver={{docker_cgroup_driver}}"
+    replace: "native.cgroupdriver=cgroupfs"
   when: "ansible_distribution_major_version == '29'
       and 'kube_minions' in group_names"
   notify: restart docker
